Function to transform DNF to CNF implemented and tested. Works well!